--- a/bibliography.bib
+++ b/bibliography.bib
@@ -84,3 +84,12 @@ pages={163-165}
 	role = {Tr.},
 	publisher  = {Clarendon Press}
 }
+%
+@book{Alonso1967,
+	author    = {D. Alonso},
+	title     = {Góngora y el Polifemo},
+	year      = {1967},
+	publisher = {Gredos},
+	volume    = {3},
+	edition   = {5}
+}
