--- a/nccph.tex
+++ b/nccph.tex
@@ -11,8 +11,8 @@
 \begin{document}
 \section*{\raggedleft\textsc{Nova criteria ad citationem philologicam (NCCPh)}\\ \textsc{Nuevos criterios para la citación filológica (NCCF)}}\par
 %
-Para libros con textos modernos = \textbf{Autor, A. (Fecha). \emph{Título} (Ed./Tr.= Nombre, N. y Nombre, N.). (v. X, t. Y/fasc. Y, Z\textsuperscript{ed.}). Editorial. <Enlace>. (= Sigla).}\par
-Para libros con textos antiguos = \textbf{Editor, E. (Fecha). \emph{Título} (Au.= Nombre, N. \& Nombre, N.). (v. X, t. Y/fasc. Y, Z\textsuperscript{ed.}). Editorial. <Enlace>. (= Sigla).}\par
+Para libros con textos modernos = \textbf{Autor, A. (Fecha). \emph{Título} (Ed./Tr.= Nombre, N. y Nombre, N.). (Vol. X, T. Y/fasc. Y, Z\textsuperscript{ed.}). Editorial. <Enlace>. (= Sigla).}\par
+Para libros con textos antiguos = \textbf{Editor, E. (Fecha). \emph{Título} (Au.= Nombre, N. \& Nombre, N.). (Vol. X, T. Y/fasc. Y, Z\textsuperscript{ed.}). Editorial. <Enlace>. (= Sigla).}\par
 Con texto de revistas = \textbf{Autor, A. (Fecha). ``Título''. Revista, Nº, páginas. Editorial. <Enlace>.}\par
 Para capítulos o artículos en libros o compilaciones = \textbf{Autor, A. (Fecha). ``Título''. \emph{Título del libro o compilación} (Serie o «colección», Nº), Nº págs. Editorial. <Enlace>.}\par
 Con texto o material desde internet = \textbf{Autor, A. (Fecha/S. F.). ``Nombre''. <Enlace>. (= Sigla).}\par
