--- a/bibliography.bib
+++ b/bibliography.bib
@@ -36,6 +36,7 @@ pages={163-165}
 @book{uhlig1878,
 	author      = {Uhlig, G. and Schneider, R.},
 	title       = {Grammatici Graeci: Apollonii Dyscoli Quae Supersunt, Scripta Minora},
+	rauthor = {Apolonio Díscolo},
 	volume      = {1},
 	fasciculus  = {1},
 	year        = {1878},
