--- a/nncph.tex
+++ b/nncph.tex
@@ -6,7 +6,7 @@
 \addbibresource{bibliography.bib}
 \usepackage[breaklinks=true,hidelinks]{hyperref}
 \setmainlanguage{spanish}
-\setmainfont{paskerville}[RawFeature=lnum]
+\setmainfont{altstandard}[RawFeature=lnum]
 %
 \begin{document}
 \section*{\raggedleft\textsc{Novae normae ad citationem philologicam (NNCPh)}\\ \textsc{Nuevas normas para la citación filológica (NNCF)}}\par
